[metadata]
name = meta-maas
version = 0.2
author = MAAS Developers
author-email = maas-devel@lists.launchpad.net
summary = Tool to manage multiple MAAS regions
description-file = README
home-page = http://maas.io
license = AGPLv3
classifiers =
    Development Status :: 5 - Production
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: GNU Affero General Public License v3
    Operating System :: POSIX :: Linux
    Programming Language :: JavaScript
    Programming Language :: Python
    Topic :: System :: Systems Administration

[files]
packages = meta_maas

[entry_points]
console_scripts =
    meta-maas = meta_maas.cmd:main
